# robosoft

./: .gitignore  CMakeLists.txt  TODO.txt  joint_limits.txt  package.xml  setup.py
include/: UR5e.h
launch/: franka_robosoft.launch  ur_robosoft.launch  ur_robosoft_crta.launch  ur_sim.launch
resources/: config.yaml  franka_config.yaml  franka_home.yaml  franka_record.yaml  franka_record_A_joints.yaml  franka_record_A_joints_list.yaml  franka_record_A_pose.yaml  franka_record_low.yaml  franka_test_joints.yaml  franka_test_perpendicular.yaml  grasp_B.yaml  record_B.yaml  ur_config.yaml  ur_config_far.yaml  ur_home.yaml  ur_home_pick.yaml  ur_record.yaml  ur_record_pick.yaml  ur_sim_config.yaml  ur_test.yaml
resources/old_config_files/: ur_config_crta.yaml  ur_config_far.yaml  ur_sim_config.yaml
resources/old_joint_states/: ur_home.yaml  ur_home_far.yaml  ur_record.yaml  ur_record_far.yaml  ur_record_pick.yaml  ur_sim_home.yaml
scripts/: control.py  franka_control.py  franka_python_control.py  ur_control.py  ur_control_sim.py  waypoint_record.py
src/: UR5e.cpp  franka.cpp  ur_sim.cpp
src/robosoft/: franka_moveit_robosoft.py
srv/: cartesianPath.srv  closeGripper.srv  grasp.srv  positionGoal.srv
